# pydi

./: .gitignore  pyproject.toml  run_example.py  run_object_example.py
pydi/: __init__.py  api.py  component.py  container.py  core.py  declarative.py  inject.py  injection.py  qualifiers.py  registry.py  scopes.py
tests/: test_qualifiers.py
